# Omi

./: .gitignore  README.md  main.py  pyproject.toml
agents/: parcel_agent.py
backend/src/core/firestore/: connection.js
backend/src/crud/: videoUpload.js
config/: .env  db.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/components/: DashboardPage.jsx  LoginPage.jsx
frontend/src/context/: AuthContext.jsx
models/: a2a.py  db_model.py  parcel.py
utils/: flood_db.py  retrieve_db.py
